profile page is under construction, I have successfully fixed the overlap issue

--- a/frontend/src/styles/sidebar.module.css
+++ b/frontend/src/styles/sidebar.module.css
@@ -2,6 +2,16 @@ a {
     text-decoration: none;
 }
 
+.splitView {
+    display: flex;
+    flex-direction: row;
+}
+
+/* This CSS can be applied to a div in order to make it so that it occupies the space of the sidebar */
+.splitSpacer {
+    width: 295px;
+}
+
 .sidebarSpacer {
     height: 10px;
     flex-grow: 0.92;
